Attempting to fix sidebar menu on mobile.

--- a/src/components/Contact/ContactForm.scss
+++ b/src/components/Contact/ContactForm.scss
@@ -28,3 +28,12 @@
         }
     }
 }
+
+@media only screen and (max-width: 600px) {
+    .form-container {
+
+        form {
+            width: 60%;
+        }
+    }
+}
