--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -82,6 +82,42 @@ header {
     }
 }
 
+@media only screen and (min-width: 1367px) and (max-width: 1572px) {
+
+    .sidenav {
+        height: 100%;
+        width: 100%;
+
+        span {
+            position: absolute;
+            top: 85%;
+            right: 5%;
+            text-align: center;
+            color: #2eccbd;
+            cursor: pointer;
+            font-size: 5em;
+        }
+
+        ul {
+            display: flex;
+            flex-direction: column;
+            align-items: left;
+            justify-content: center;
+            height: 100vh;
+            margin: 0% 0% 0% 0%;
+            background-color: white;
+            color: #2eccbd;
+        }
+
+        ul li {
+            margin-left: 38%;
+            list-style: none;
+            font-size: 2.25rem;
+            text-align: left;
+        }
+    }
+}
+
 @media only screen and (max-width: 1366px) {
 
     .sidenav {
@@ -98,6 +134,17 @@ header {
             font-size: 5em;
         }
 
+        ul {
+            display: flex;
+            flex-direction: column;
+            align-items: left;
+            justify-content: center;
+            height: 100vh;
+            margin: 0% 0% 0% 0%;
+            background-color: white;
+            color: #2eccbd;
+        }
+
         ul li {
             margin-left: 30%;
             list-style: none;
@@ -109,16 +156,27 @@ header {
 
 @media only screen and (max-width: 600px) {
     .sidenav {
-        height: 100%;
-        width: 100%;
+        height: 100vh;
+        width: 100vw;
 
         span {
             position: absolute;
-            top: 75%;
+            top: 70%;
             text-align: center;
             color: #2eccbd;
             cursor: pointer;
             font-size: 5em;
+        }
+
+        ul {
+            display: flex;
+            flex-direction: column;
+            align-items: left;
+            justify-content: center;
+            height: 100vh;
+            margin: 0% 0% 0% 0%;
+            background-color: white;
+            color: #2eccbd;
         }
 
         ul li {
